force-app/main/default/objects/Time_Entry__c/fields/Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate__c</fullName>
    <description>Hourly bill rate (copied from engagement, can be overridden)</description>
    <label>Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>