force-app/main/default/objects/Time_Entry__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this time entry is billable to the client</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>