force-app/main/default/objects/Time_Entry__c/fields/Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billable_Amount__c</fullName>
    <description>Total billable amount for this entry</description>
    <formula>IF(Billable__c, Hours__c * Bill_Rate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>