force-app/main/default/objects/Time_Entry__c/fields/Contractor_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Engagement__c</fullName>
    <description>The contractor engagement this time entry belongs to</description>
    <label>Contractor Engagement</label>
    <referenceTo>Contractor_Engagement__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>