force-app/main/default/objects/Time_Entry__c/fields/Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cost_Amount__c</fullName>
    <description>Total cost for this entry</description>
    <formula>Hours__c * Cost_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>