force-app/main/default/objects/Time_Entry__c/fields/Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cost_Rate__c</fullName>
    <description>Hourly cost rate (copied from engagement, can be overridden)</description>
    <label>Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>