force-app/main/default/objects/Time_Entry__c/fields/Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Margin_Amount__c</fullName>
    <description>Margin for this entry (Billable - Cost)</description>
    <formula>Billable_Amount__c - Cost_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>