force-app/main/default/objects/Time_Entry__c/fields/Week_Starting__c.field-meta.xml
<CustomField>
    <fullName>Week_Starting__c</fullName>
    <description>The Monday of the week this entry belongs to (for weekly reporting)</description>
    <formula>Entry_Date__c - MOD(Entry_Date__c - DATE(1900,1,8), 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Starting</label>
    <type>Date</type>
</CustomField>